--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,34 @@
 {
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "assert": "^2.1.0",
     "axios": "^1.7.7",
+    "browserify-zlib": "^0.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "constants-browserify": "^1.0.0",
     "lucide-react": "^0.453.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-scripts": "^5.0.1",
+    "shadcn-ui": "^0.9.2",
+    "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "util": "^0.12.5"
   },
   "browserslist": {
     "production": [
@@ -31,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.14"
   }
 }
