--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "constants-browserify": "^1.0.0",
     "lucide-react": "^0.453.0",
+    "marked": "^14.1.3",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.3.1",
